--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@vueuse/core": "^10.7.2",
     "vue": "^3.3.11",
+    "vue-dragscroll": "^4.0.5",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
