--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@vueuse/core": "^10.7.2",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.3.11",
     "vue-dragscroll": "^4.0.5",
     "vue-router": "^4.2.5"
